# oneshim-client

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.es.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.es.md  SECURITY.ja.md  SECURITY.md  SECURITY.zh-CN.md  about.hbs  about.toml  cliff.toml  deny.toml  lefthook.yml
crates/oneshim-analysis/: Cargo.toml
crates/oneshim-analysis/benches/: coaching_bench.rs  hnsw_bench.rs
crates/oneshim-analysis/src/: adaptive_search.rs  adaptive_trigger.rs  analyzer.rs  assembler.rs  auto_tuner.rs  calibration_buffer.rs  clustering_strategy.rs  coaching_engine.rs  coaching_template.rs  constraint_builder.rs  content_tracker.rs  daily_digest_generator.rs  daily_insight_generator.rs  digest_exporter.rs  document_heading.rs  embedding_pipeline.rs  error.rs  fallback_analysis_provider.rs  feedback_tracker.rs  few_shot_selector.rs  focus_shared.rs  gmm_detector.rs  gui_aggregator.rs  gui_work_type_refiner.rs  hdbscan_detector.rs  hnsw_adapter.rs  hybrid_search_service.rs  kmeans_adapter.rs  lib.rs  llm_segment_summarizer.rs  llm_work_type_refiner.rs  param_resolver.rs  prompts.rs  query_expander.rs  regime_analysis_facade.rs  regime_classifier.rs  regime_detector.rs  regime_goal_tracker.rs  regime_manager.rs  segment_buffer.rs  (+7 more)
crates/oneshim-api-contracts/: Cargo.toml
crates/oneshim-api-contracts/src/: ai_providers.rs  annotations.rs  audit_export.rs  automation.rs  automation_gui.rs  backup.rs  bug_report.rs  coaching.rs  common.rs  dashboard.rs  data.rs  digests.rs  error.rs  events.rs  export.rs  external_grpc.rs  focus.rs  frames.rs  idle.rs  integration.rs  lib.rs  metrics.rs  onboarding.rs  playbooks.rs  pomodoro.rs  processes.rs  provider_specs.rs  provider_surface_specs.rs  recalibration.rs  reports.rs  search.rs  sessions.rs  settings.rs  stats.rs  stream.rs  suggestions.rs  support.rs  tags.rs  timeline.rs  tracking_schedule.rs  (+1 more)
crates/oneshim-app/: Cargo.toml
crates/oneshim-app/assets/: .gitkeep  icon.icns  oneshim.entitlements
crates/oneshim-app/src/: automation_runtime.rs  autostart.rs  cli_subscription_bridge.rs  event_bus.rs  focus_analyzer.rs  focus_probe_adapter.rs  gui_runner.rs  integrity_guard.rs  lifecycle.rs  main.rs  memory_profiler.rs  notification_manager.rs  platform_accessibility.rs  platform_overlay.rs  provider_adapters.rs  scheduler.rs  update_coordinator.rs  updater.rs  workflow_intelligence.rs
crates/oneshim-app/tests/: compression_roundtrip.rs  config_and_wiring.rs  error_paths.rs  memory_profile_test.rs  mock_server.rs  server_integration_test.rs  storage_flow.rs  suggestion_pipeline.rs  vision_pipeline.rs
crates/oneshim-app/wix/: license.rtf  main.wxs
crates/oneshim-audio/: Cargo.toml
crates/oneshim-audio/src/: capture.rs  cloud_stt.rs  lib.rs  model_downloader.rs  vad.rs  whisper.rs
crates/oneshim-automation/: Cargo.toml
crates/oneshim-automation/benches/: automation_bench.rs
crates/oneshim-automation/src/: action_dispatcher.rs  audit.rs  controller.rs  error.rs  gui_interaction.rs  input_driver.rs  intent_planner.rs  intent_resolver.rs  lib.rs  local_llm.rs  overlay.rs  policy.rs  presets.rs  resolver.rs
crates/oneshim-automation/tests/: perf_budget.rs  sandbox_integration.rs
crates/oneshim-core/: Cargo.toml
crates/oneshim-core/benches/: core_bench.rs
crates/oneshim-core/config/: ai_model_lifecycle_policy.json
crates/oneshim-core/src/: ai_model_lifecycle_policy.rs  app_registry.rs  binary_quantizer.rs  config.rs  config_manager.rs  consent.rs  error.rs  ivf_index.rs  lib.rs  provider_surface.rs  quantization.rs  sanitized_display.rs
crates/oneshim-embedding/: .gitignore  Cargo.toml
crates/oneshim-lint/: Cargo.toml
crates/oneshim-monitor/: Cargo.toml
crates/oneshim-network/: Cargo.toml  build.rs
crates/oneshim-sandbox-worker/: Cargo.toml
crates/oneshim-storage/: Cargo.toml
crates/oneshim-suggestion/: Cargo.toml
crates/oneshim-ui/: Cargo.toml
crates/oneshim-vision/: Cargo.toml
crates/oneshim-web/: Cargo.toml  build.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/assets/: Info.plist  oneshim.entitlements
src-tauri/capabilities/: default.json  overlay.json  tracking-panel.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: license.txt
src-tauri/pkg/: build-pkg.sh  conclusion.html  license.html  welcome.html
src-tauri/src/: agent_runtime.rs  agent_runtime_support.rs  app_runtime_launch.rs  app_runtime_launch_health_probe.rs  audit_query.rs  auditing_session.rs  auth_cli.rs  automation_controller_builder.rs  automation_runtime.rs  autostart.rs  background_runtime.rs  bootstrap_preflight.rs  bootstrap_runtime.rs  bridge_cli.rs  capture_services.rs  cli_subscription_bridge.rs  commands.rs  credential_migration.rs  desktop_permissions.rs  desktop_startup.rs  event_bus.rs  fallback_stt.rs  feature_capabilities.rs  focus_auto.rs  focus_mode.rs  focus_probe_adapter.rs  integration_insight_source.rs  integration_policy.rs  integration_prompt_delivery.rs  integration_runtime.rs  ipc_error.rs  launch_resources.rs  lifecycle.rs  log_retention.rs  macos_integration.rs  magic_overlay.rs  magic_overlay_driver.rs  main.rs  memory_profiler.rs  notification_manager.rs  (+26 more)
src-tauri/tests/: accessibility_integration.rs  coaching_e2e.rs  compression_roundtrip.rs  config_and_wiring.rs  error_paths.rs  external_grpc_launcher_smoke.rs  gdpr_regression.rs  gui_smoke_e2e.rs  install_banner_docs.rs  linux_autostart_systemd_live.rs  linux_autostart_unit.rs  memory_profile.rs  regressions.rs  release_smoke_hygiene.rs  rollback_swaps_binary_and_emits_event.rs  server_integration.rs  single_instance_integration.rs  skill_loader.rs  skill_loader_test.rs  storage_flow.rs  suggestion_pipeline.rs  text_extraction_e2e.rs  tracking_schedule_gating_integration.rs  web_server_startup.rs
src-tauri/wix/: license.rtf  main.wxs
(+1812 files in other folders)
