[workspace]
members = [
    "crates/oneshim-api-contracts",
    "crates/oneshim-lint",
    "crates/oneshim-core",
    "crates/oneshim-monitor",
    "crates/oneshim-vision",
    "crates/oneshim-network",
    "crates/oneshim-storage",
    "crates/oneshim-suggestion",
    # "crates/oneshim-ui",      # iced UI → Tauri v2 마이그레이션으로 제거
    "crates/oneshim-web",
    "crates/oneshim-automation",
    "crates/oneshim-analysis",
    "crates/oneshim-embedding",
    # "crates/oneshim-app",     # src-tauri로 대체
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.4.11-rc.2"
license = "Apache-2.0"
rust-version = "1.77.1"
repository = "https://github.com/pseudotop/oneshim-client"
homepage = "https://github.com/pseudotop/oneshim-client"
authors = ["ONESHIM Contributors"]
keywords = ["desktop-agent", "monitoring", "ai", "productivity", "automation"]
categories = ["gui", "os", "network-programming", "asynchronous"]

[workspace.dependencies]
# 비동기 런타임
tokio = { version = "1", features = ["full"] }

# 직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 클라이언트 (native-tls로 ring 의존성 회피)
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "stream", "native-tls", "form"] }

# SSE 수신 스트림 파서
eventsource-stream = "0.2"

# WebSocket (native-tls로 ring 의존성 회피)
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }

# 시스템 모니터링
sysinfo = "0.38"

# 로컬 DB
rusqlite = { version = "0.39", features = ["bundled", "fallible_uint"] }

# 압축
flate2 = "1"
zstd = "0.13"
lz4_flex = "0.13"

# 이미지 처리 (Edge Processing)
image = "0.25"
fast_image_resize = "6"
webp = "0.3"
xcap = "0.9"
leptess = "0.14"
base64 = "0.22"

# Tauri v2 (iced → Tauri 마이그레이션)
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-build = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-webdriver = "0.2"

# 공간 인덱스
rstar = "0.12"

# 에러 처리
thiserror = "2"
anyhow = "1"

# 비동기 trait (dyn Trait + async fn 지원)
async-trait = "0.1"
async-stream = "0.3"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 설정
config = "0.14"
directories = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# 유틸리티
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.10"
url = "2"
ed25519-dalek = "2.1"
zeroize = { version = "1", features = ["derive"] }
gethostname = "1.1"

# Sync encryption (Phase 3b — shared by oneshim-storage + oneshim-network)
aes-gcm = "0.10"
argon2 = "0.5"
hex = "0.4"

# LAN Sync (Phase 3b-2)
rcgen = "0.14"
mdns-sd = "0.18"
axum-server = "0.8"
rustls-pemfile = "2"

# OS 키체인 (시크릿 저장)
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# Linux AT-SPI2 accessibility (D-Bus based)
atspi = { version = "0.29", default-features = false, features = ["tokio", "connection", "proxies"] }
atspi-common = { version = "0.13", default-features = false }

# 성능 최적화 (Phase 31-33)
lru = "0.16"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.21"

# gRPC (Phase 34 - Protobuf API 통합)
tonic = "0.14"
tonic-prost = "0.14"
tonic-health = "0.14"
tonic-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# 입력 시뮬레이션 (크로스 플랫폼 마우스/키보드)
enigo = { version = "0.6", features = ["serde"] }

# 자동 업데이트 (native-tls로 ring 의존성 회피)
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2"] }
tar = "0.4"
zip = "8"

# 웹 프레임워크 (Axum)
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "compression-gzip"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# macOS 네이티브 API
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.25"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGPath", "CGColor", "CGColorSpace"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication", "NSRunningApplication",
    "NSWindow", "NSView", "NSColor", "NSScreen",
    "NSGraphics", "NSResponder", "NSImage",
] }
objc2-quartz-core = { version = "0.3", features = [
    "CALayer", "CAShapeLayer",
    "CAAnimation",
    "CAMediaTiming",
    "CAMediaTimingFunction",
    "objc2-core-foundation",
    "objc2-core-graphics",
] }

# Windows 플랫폼 API
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Accessibility", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_Storage_FileSystem"] }
windows = { version = "0.61", features = ["Win32_UI_Accessibility", "Win32_System_Com", "Win32_Foundation", "Win32_System_Variant", "Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Foundation"] }

# 내부 크레이트
oneshim-core = { path = "crates/oneshim-core" }
oneshim-api-contracts = { path = "crates/oneshim-api-contracts" }
oneshim-monitor = { path = "crates/oneshim-monitor" }
oneshim-vision = { path = "crates/oneshim-vision" }
oneshim-network = { path = "crates/oneshim-network" }
oneshim-storage = { path = "crates/oneshim-storage" }
oneshim-suggestion = { path = "crates/oneshim-suggestion" }
oneshim-web = { path = "crates/oneshim-web" }
oneshim-automation = { path = "crates/oneshim-automation" }
oneshim-analysis = { path = "crates/oneshim-analysis" }
oneshim-embedding = { path = "crates/oneshim-embedding" }

# POSIX 디스크 공간 조회 (statvfs)
libc = "0.2"

# 테스트 의존성 (각 crate의 [dev-dependencies]에서 workspace = true로 참조)
mockito = "1"
tokio-test = "0.4"
tempfile = "3"
assert_matches = "1"
criterion = { version = "0.8", features = ["html_reports"] }
