[package]
name = "oneshim-app"
description = "ONESHIM 데스크톱 에이전트 — Tauri v2 기반 GUI, DI, 오케스트레이션, 라이프사이클"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "oneshim"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-webdriver = { workspace = true, optional = true }

# 내부 크레이트
oneshim-core = { workspace = true }
oneshim-automation = { workspace = true }
oneshim-monitor = { workspace = true }
oneshim-vision = { workspace = true }
oneshim-network = { workspace = true, optional = true }
oneshim-storage = { workspace = true }
oneshim-suggestion = { workspace = true }
oneshim-web = { workspace = true }
oneshim-api-contracts = { workspace = true }
oneshim-analysis = { workspace = true }
oneshim-audio = { workspace = true, optional = true }
oneshim-embedding = { workspace = true, optional = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
directories = { workspace = true }
parking_lot = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }

# 자동 업데이트
self-replace = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
keyring = { workspace = true }
image = { workspace = true }
lru = { workspace = true }
raw-window-handle = "0.6"

[features]
default = ["custom-protocol", "analysis", "native-vision", "linux-atspi"]
custom-protocol = ["tauri/custom-protocol"]
analysis = ["dep:oneshim-network"]
server = ["analysis"]
grpc = ["server", "oneshim-network/grpc"]
audio = ["dep:oneshim-audio"]
stt = ["audio", "oneshim-audio/whisper"]
cloud-stt = ["audio", "oneshim-audio/cloud-stt"]
download = ["audio", "oneshim-audio/download"]
embedding = ["dep:oneshim-embedding"]
native-vision = ["oneshim-vision/native-vision"]
hnsw = ["oneshim-analysis/hnsw"]
linux-atspi = ["oneshim-vision/linux-atspi"]
lan-sync = ["oneshim-network/lan-sync"]
webdriver = ["dep:tauri-plugin-webdriver"]

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-core-foundation = { workspace = true }
objc2-core-graphics = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-quartz-core = { workspace = true }
dispatch2 = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[package.metadata.bundle]
name = "ONESHIM"
identifier = "com.oneshim.client"
icon = ["icons/icon.icns"]
copyright = "Copyright 2026 ONESHIM Contributors"
category = "Productivity"
short_description = "AI-powered autonomous office work support agent"
long_description = """
ONESHIM은 AI 기반 자율 사무 업무 지원 에이전트입니다.
데스크톱 컨텍스트를 모니터링하고 지능형 제안을 제공합니다.
"""
osx_minimum_system_version = "10.15"

[package.metadata.deb]
maintainer = "ONESHIM Team"
copyright = "2026, ONESHIM Contributors"
license-file = ["../LICENSE", "4"]
extended-description = """
ONESHIM은 AI 기반 자율 사무 업무 지원 에이전트입니다.
"""
depends = "$auto, libgtk-3-0, libglib2.0-0, libwebkit2gtk-4.1-0, libappindicator3-1"
section = "utility"
priority = "optional"
assets = [
    ["target/release/oneshim", "usr/bin/", "755"],
]

[dev-dependencies]
serde_json = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
mockito = { workspace = true }
tokio-test = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
zeroize = { workspace = true }
