[package]
name = "oneshim-analysis"
description = "Standalone LLM analysis pipeline — pattern mining, context assembly, orchestration"
edition.workspace = true
version.workspace = true

[dependencies]
oneshim-core = { path = "../oneshim-core" }
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
