[package]
name = "oneshim-analysis"
description = "Standalone LLM analysis pipeline — pattern mining, context assembly, orchestration"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
oneshim-core = { path = "../oneshim-core" }
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
hdbscan = { version = "0.10", optional = true }
serde = { workspace = true, features = ["derive"] }
usearch = { version = "2", optional = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
lru.workspace = true
uuid = { workspace = true, features = ["v4"] }

[features]
default = ["hdbscan"]
hdbscan = ["dep:hdbscan"]
hnsw = ["dep:usearch"]

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[[bench]]
name = "hnsw_bench"
harness = false
required-features = ["hnsw"]
