[package]
name = "oneshim-api-contracts"
description = "ONESHIM web API transport contracts"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
oneshim-core = { workspace = true }
