[package]
name = "oneshim-app"
description = "ONESHIM 클라이언트 앱 진입점 — DI, 오케스트레이션, 라이프사이클"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "oneshim"
path = "src/main.rs"

[dependencies]
oneshim-core = { workspace = true }
oneshim-automation = { workspace = true }
oneshim-monitor = { workspace = true }
oneshim-vision = { workspace = true }
oneshim-network = { workspace = true, features = ["grpc"] }
oneshim-storage = { workspace = true }
oneshim-suggestion = { workspace = true }
oneshim-ui = { workspace = true }
oneshim-web = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
self_update = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
mockito = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
# 서버 통합 테스트용
axum = { workspace = true }
futures = { workspace = true }

# macOS .app 번들 설정 (cargo-bundle)
[package.metadata.bundle]
name = "ONESHIM"
identifier = "com.oneshim.client"
icon = ["assets/icon.icns"]
version = "0.1.0"
copyright = "Copyright © 2024 ONESHIM Team"
category = "Productivity"
short_description = "AI-powered autonomous office work support agent"
long_description = """
ONESHIM은 AI 기반 자율 사무 업무 지원 에이전트입니다.
데스크톱 컨텍스트를 모니터링하고 지능형 제안을 제공합니다.
"""
osx_minimum_system_version = "10.15"

# Windows 설정
[package.metadata.bundle.windows]
wix = "wix/main.wxs"

# Debian 패키지 설정
[package.metadata.deb]
maintainer = "ONESHIM Team"
copyright = "2024, ONESHIM Team"
license-file = ["../LICENSE", "4"]
extended-description = """
ONESHIM은 AI 기반 자율 사무 업무 지원 에이전트입니다.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/oneshim", "usr/bin/", "755"],
]
