[package]
name = "oneshim-audio"
description = "Audio capture and speech-to-text — cpal + whisper-rs"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
whisper = ["dep:whisper-rs"]
download = ["dep:reqwest", "dep:sha2", "dep:futures-util"]
cloud-stt = ["dep:reqwest"]

[dependencies]
oneshim-core = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }
whisper-rs = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true, features = ["stream"], optional = true }
sha2 = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
mockito = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
