[package]
name = "oneshim-core"
description = "ONESHIM 도메인 모델, 포트(trait), 에러 타입"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
