[package]
name = "oneshim-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "language-check"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
