[package]
name = "oneshim-monitor"
description = "시스템 모니터링 어댑터 — CPU, 메모리, 활성 창 추적"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
oneshim-core = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }
